<resources>
    <string name="app_name">Calcien</string>
    <string name="error">error</string>
    <string name="porcien">%</string>
    <string name="division">÷</string>
    <string name="multiplicacion">*</string>
    <string name="meno">-</string>
    <string name="delete">DEL</string>
    <string name="Clear">CA</string>
    <string name="exponente">^</string>
    <string name="seno">sen</string>
    <string name="coseno">cos</string>
    <string name="tangente">tan</string>
    <string name="cero">0</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>
    <string name="mas">+</string>
    <string name="pi">π</string>
    <string name="punto">.</string>
    <string name="igual">=</string>
    <string name="raiz">√</string>
    <string name="logaritmo">log</string>
    <string name="cubo">X³</string>
    <string name="cuadrado">X²</string>
    <string name="historial">Historial</string>
    <string name="limpiar">borrar historial</string>

</resources>
