<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Naranja"
    android:layout_weight="1">


    <LinearLayout
        android:id="@+id/layout1.1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:background="@color/Naranja"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/res"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/otroboton"
            android:textColor="@color/Naranja"
            android:padding="3dp"
            android:textAlignment="inherit"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/layout1.2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/layout1.2.00"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:padding="5dp">

                <Button
                    android:id="@+id/bnthistorial"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="historial"
                    android:text="@string/historial"
                    android:textAlignment="center"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/otroboton"
                    android:padding="3dp"
                    android:textSize="20sp"
                    android:textColor="@color/Naranja"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout1.2.1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal"
                android:layout_weight="1">

                <Button
                    android:id="@+id/bntexponente"
                    android:background="@drawable/buttonstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:onClick="exponente"
                    android:text="@string/exponente"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/bntseno"
                    android:background="@drawable/buttonstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:onClick="seno"
                    android:text="@string/seno"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/bntcoseno"
                    android:background="@drawable/buttonstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:onClick="coseno"
                    android:text="@string/coseno"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/bnttangente"
                    android:background="@drawable/buttonstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:onClick="tangente"
                    android:text="@string/tangente"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout1.2.1.1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal"
                android:layout_weight="1">

                <Button
                    android:id="@+id/bntraiz"
                    android:background="@drawable/buttonstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="raiz"
                    android:text="@string/raiz"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bntcubo"
                    android:background="@drawable/buttonstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="cubo"
                    android:text="@string/cubo"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bntcuadrado"
                    android:background="@drawable/buttonstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="cuadrado"
                    android:text="@string/cuadrado"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bntpi"
                    android:background="@drawable/buttonstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="pi"
                    android:text="@string/pi"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout1.2.2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal"
                android:layout_weight="1">

                <Button
                    android:id="@+id/bntlimpiar"
                    android:background="@drawable/buttonstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="limpiar"
                    android:text="@string/Clear"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bntborrar"
                    android:background="@drawable/buttonstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="borrar"
                    android:text="@string/delete"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bntporciento"
                    android:background="@drawable/buttonstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="porciento"
                    android:text="@string/porcien"
                    android:textAlignment="center"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bntdivision"
                    android:background="@drawable/buttonstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="division"
                    android:text="@string/division"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout1.2.3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal"
                android:layout_weight="1">

                <Button
                    android:id="@+id/bntsiete"
                    android:background="@drawable/buttonstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="siete"
                    android:text="@string/siete"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bntocho"
                    android:background="@drawable/buttonstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="ocho"
                    android:text="@string/ocho"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bntnueve"
                    android:background="@drawable/buttonstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="nueve"
                    android:text="@string/nueve"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bntmultiplicar"
                    android:background="@drawable/buttonstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="multiplicar"
                    android:text="@string/multiplicacion"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout1.2.4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal"
                android:layout_weight="1">

                <Button
                    android:id="@+id/bntcuatro"
                    android:background="@drawable/buttonstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="cuatro"
                    android:text="@string/cuatro"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bntcinco"
                    android:background="@drawable/buttonstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="cinco"
                    android:text="@string/cinco"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bntseis"
                    android:background="@drawable/buttonstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="seis"
                    android:text="@string/seis"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bntsuma"
                    android:background="@drawable/buttonstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="suma"
                    android:text="@string/mas"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout1.2.5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal"
                android:layout_weight="1">

                <Button
                    android:id="@+id/bntuno"
                    android:background="@drawable/buttonstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="uno"
                    android:text="@string/uno"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bntdos"
                    android:background="@drawable/buttonstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="dos"
                    android:text="@string/dos"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bnttres"
                    android:background="@drawable/buttonstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="tres"
                    android:text="@string/tres"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bntresta"
                    android:background="@drawable/buttonstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="resta"
                    android:text="@string/meno"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout1.2.6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal"
                android:layout_weight="1">

                <Button
                    android:id="@+id/bntpunto"
                    android:background="@drawable/buttonstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="punto"
                    android:text="@string/punto"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bntcero"
                    android:background="@drawable/buttonstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="cero"
                    android:text="@string/cero"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bntlogaritmo"
                    android:background="@drawable/buttonstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="logaritmo"
                    android:text="@string/logaritmo"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/bntigual"
                    android:background="@drawable/buttonstyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="igual"
                    android:text="@string/igual"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>


</LinearLayout>


